--- a/stow_packages/conda/.condarc
+++ b/stow_packages/conda/.condarc
@@ -1,4 +1,7 @@
 env_prompt: '({default_env}) '
+channels: [conda-forge]
+pip_interop_enabled: true
+auto_activate_base: false
 
 # channel_priority: strict
 
