--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -80,6 +80,7 @@
         "anns",
         "AOM's",
         "aomsdk",
+        "aperiodicity",
         "API's",
         "Aptima",
         "arange",
@@ -256,6 +257,7 @@
         "mobilenetv",
         "moco",
         "moderna",
+        "mrdet",
         "Murt",
         "nargs",
         "nbconvert",
@@ -375,6 +377,7 @@
         "vggoriginal",
         "visdrone",
         "visualnews",
+        "vocoding",
         "vscode's",
         "vstack",
         "wandb",
@@ -543,7 +546,7 @@
     "python.dataScience.maxOutputSize": 1200,
     "python.dataScience.sendSelectionToInteractiveWindow": false,
     "python.dataScience.textOutputLimit": 0,
-    "python.defaultInterpreterPath": "/home/gbiamby/mambaforge/envs/sem-unfoil2/bin/python",
+    "python.defaultInterpreterPath": "/home/gbiamby/mambaforge/envs/sem_env/bin/python",
     "python.diagnostics.sourceMapsEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "python.formatting.provider": "black",
@@ -646,7 +649,7 @@
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter-notebook"
     },
-    "workbench.iconTheme": "eq-material-theme-icons-light",
+    "workbench.iconTheme": "vscode-icons",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
     "workbench.tree.indent": 15,
@@ -678,7 +681,8 @@
     "makefile.configureAfterCommand": false,
     "makefile.configureOnEdit": false,
     "makefile.configureOnOpen": false,
-    "window.zoomLevel": 3,
+    "window.zoomLevel": 2,
     "diffEditor.ignoreTrimWhitespace": false,
-    "terminal.integrated.smoothScrolling": true
+    "terminal.integrated.smoothScrolling": true,
+    "python.condaPath": "/home/gbiamby/mambaforge/condabin/mamba"
 }
