Set shell in tmux config

--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -4,6 +4,9 @@
 # set -g prefix C-a
 # bind C-a send-prefix
 
+# Set shell to zsh
+set-option -g default-shell $SHELL
+
 # start with window 1 (instead of 0)
 set -g base-index 1
 
